<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.6">
  <GVL Name="GVL" Id="{ab93b2c7-a1a6-4b8e-83f7-7fe6d72496dd}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	PLCPRJ_BUFFER_SIZE		: UDINT := 1000;					(* Max. internal fifo/receiver buffer size *)
	
	PLCPRJ_CLIENT_SEND_CYCLE_TIME			: TIME := T#1S;
	PLCPRJ_RECEIVE_POLLING_TIME				: TIME := T#100MS;
	PLCPRJ_RECEIVE_TIMEOUT					: TIME := T#50S;
	
	(* Some project specific error codes *)
	PLCPRJ_ERROR_RECEIVE_TIMEOUT			: UDINT := 16#8101;(* Receive timeout *)
	PLCPRJ_ERROR_SENDFIFO_OVERFLOW			: UDINT := 16#8102;(* Send fifo overflow *)
	PLCPRJ_ERROR_RECFIFO_OVERFLOW			: UDINT := 16#8103;(* Receive fifo overflow *)	
	
	TERMINATION_CHAR_CODE					: BYTE := 10;	
	
END_VAR

VAR_GLOBAL
	sSrvNetID					: T_AmsNetID	:= ''; 				(* TwinCAT TCP/IP server network address - Set to Local via ''*)
	sSocketRemoteHost			: T_IPv4Addr := '10.5.1.166';		(* Remote Socket Server IP Address*)
	nSocketRemotePort			: UDINT := 14150;  					(* Server port number *)
	
	RFID_TAG			AT %Q*	: STRING(40);
	READ_ZONE_BEGIN 	AT %I*	: BOOL;
	SET_TEST_OUTPUT		AT %Q* 	: BOOL;
	TON_FLASH					: TON;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>