<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.6">
  <POU Name="FB_ProcessSocketData" Id="{469bdba1-eae7-41a2-a472-6965da818da9}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_ProcessSocketData
VAR_IN_OUT
	fbTx 		: FB_FrameFifo;(* TX fifo *)
	fbRx 		: FB_FrameFifo;(* RX fifo *)
	fbLog		: FB_LogFifo;(* Log message fifo *)
END_VAR
VAR
	sToServer	: T_MaxString := '';
	sFromServer	: T_MaxString := '';
	sLogMessage : T_MaxString := '';
	nCounter	: UDINT;
	fbSndTimer	: TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*------------------------------- Send cyclic message strings ------------------------------------------*)
fbSndTimer( IN := FALSE, PT := GVL.PLCPRJ_CLIENT_SEND_CYCLE_TIME );
IF fbSndTimer.Q THEN
	fbSndTimer( IN := FALSE );

	(* Create new message string *)
	nCounter := nCounter  + 1;
	sToServer := CONCAT( 'Client message: ', UDINT_TO_STRING(nCounter) );

	fbTx.AddToTail( sPut := sToServer );(* Put string to the tx fifo *)
	IF NOT fbTx.bOk THEN(* TX fifo overflow => log error *)
		fbLog.Error( sMessage := 'FB_FrameFifo(sender)', nErrID := GVL.PLCPRJ_ERROR_SENDFIFO_OVERFLOW );
	END_IF

END_IF

(*------------------------------- Get received message strings ------------------------------------------*)
REPEAT
	fbRx.RemoveFromHead();(* Fetch string from rx fifo *)
	IF fbRx.bOk THEN(* Success *)

		(* TODO: Implement receive data handler *)
		sFromServer := fbRx.sGet;
		
		(* TEST HANDLER *)
		GVL.RFID_TAG := sFromServer;
		IF LEN(sFromServer) > 0 THEN
			GVL.TON_FLASH( IN := TRUE, PT := T#0.25S );		
			GVL.SET_TEST_OUTPUT := 1;	
		END_IF
		sFromServer := '';
		(* END TEST HANDLER *)
		
	END_IF
	
UNTIL NOT fbRx.bOk

END_REPEAT


(*------------------------------- Get log/error messages from log fifo ------------------------------------------*)
REPEAT
	fbLog.Remove( );
	IF fbLog.bOk THEN

		(* TODO: Implement log message handler *)
		sLogMessage := fbLog.sGet;

	END_IF
UNTIL NOT fbLog.bOk
END_REPEAT





]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>